--- a/lib/Lib.csproj
+++ b/lib/Lib.csproj
@@ -191,6 +191,7 @@
     <Compile Include="helper\StringHelper.cs" />
     <Compile Include="helper\HtmlHelper.cs" />
     <Compile Include="helper\ReflectionHelper.cs" />
+    <Compile Include="infrastructure\ServiceBase.cs" />
     <Compile Include="mvc\CookieHelper.cs" />
     <Compile Include="mvc\RequestHelper.cs" />
     <Compile Include="mvc\ResponseHelper.cs" />
