--- a/Hiwjcn.Core/Hiwjcn.Core.csproj
+++ b/Hiwjcn.Core/Hiwjcn.Core.csproj
@@ -68,6 +68,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Category\CategoryDal.cs" />
+    <Compile Include="Data\Common\AreaDal.cs" />
+    <Compile Include="Data\Common\CommentDal.cs" />
+    <Compile Include="Data\Common\LinkDal.cs" />
+    <Compile Include="Data\Common\MessageDal.cs" />
+    <Compile Include="Data\Common\OptionDal.cs" />
+    <Compile Include="Data\Common\ReqLogDal.cs" />
+    <Compile Include="Data\Common\UpFileDal.cs" />
+    <Compile Include="Data\EntityDB.cs" />
+    <Compile Include="Data\Page\SectionDal.cs" />
+    <Compile Include="Data\Post\PostDal.cs" />
+    <Compile Include="Data\Tag\TagDal.cs" />
+    <Compile Include="Data\Tag\TagMapDal.cs" />
+    <Compile Include="Data\User\IUserDal.cs" />
+    <Compile Include="Data\User\LoginErrorLogDal.cs" />
+    <Compile Include="Data\User\RoleDal.cs" />
+    <Compile Include="Data\User\RolePermissionDal.cs" />
+    <Compile Include="Data\User\UserDal.cs" />
+    <Compile Include="Data\User\UserRoleDal.cs" />
     <Compile Include="Domain\Category\CategoryModel.cs" />
     <Compile Include="Domain\EFMapping\MappingBase.cs" />
     <Compile Include="Domain\Sys\CommentModel.cs" />
