--- a/Hiwjcn.Bll/Hiwjcn.Bll.csproj
+++ b/Hiwjcn.Bll/Hiwjcn.Bll.csproj
@@ -134,10 +134,8 @@
   <ItemGroup>
     <Compile Include="AopBoundle.cs" />
     <Compile Include="QiniuHelper.cs" />
-    <Compile Include="Post\PostEventHandler.cs" />
     <Compile Include="Category\CategoryBll.cs" />
     <Compile Include="Page\SectionService.cs" />
-    <Compile Include="Post\PostBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\AreaService.cs" />
     <Compile Include="Common\CommentBll.cs" />
@@ -154,6 +152,7 @@
     <Compile Include="User\RoleBll.cs" />
     <Compile Include="User\RolePermissionBll.cs" />
     <Compile Include="User\UserBll.cs" />
+    <Compile Include="User\UserEventHandler.cs" />
     <Compile Include="User\UserRoleBll.cs" />
   </ItemGroup>
   <ItemGroup />
