--- a/Hiwjcn.Core/Hiwjcn.Core.csproj
+++ b/Hiwjcn.Core/Hiwjcn.Core.csproj
@@ -36,6 +36,10 @@
       <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.50.2\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -78,7 +82,6 @@
     <Compile Include="Data\Common\UpFileDal.cs" />
     <Compile Include="Data\EntityDB.cs" />
     <Compile Include="Data\Page\SectionDal.cs" />
-    <Compile Include="Data\Post\PostDal.cs" />
     <Compile Include="Data\Tag\TagDal.cs" />
     <Compile Include="Data\Tag\TagMapDal.cs" />
     <Compile Include="Data\User\IUserDal.cs" />
@@ -92,7 +95,6 @@
     <Compile Include="Domain\Sys\CommentModel.cs" />
     <Compile Include="Domain\BaseEntity.cs" />
     <Compile Include="Domain\Page\SectionModel.cs" />
-    <Compile Include="Domain\Post\PostModel.cs" />
     <Compile Include="Domain\Sys\AreaModel.cs" />
     <Compile Include="Domain\Sys\LinkModel.cs" />
     <Compile Include="Domain\Sys\MessageModel.cs" />
