--- a/Hiwjcn.Bll/Hiwjcn.Bll.csproj
+++ b/Hiwjcn.Bll/Hiwjcn.Bll.csproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AopBoundle.cs" />
+    <Compile Include="MyService.cs" />
     <Compile Include="QiniuHelper.cs" />
     <Compile Include="Category\CategoryBll.cs" />
     <Compile Include="Page\SectionService.cs" />
