--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.2.1" targetFramework="net45" />
+  <package id="Castle.Core" version="1.2.0" targetFramework="net45" />
+  <package id="Castle.DynamicProxy" version="2.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
+  <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="NLog" version="1.0.0.505" targetFramework="net45" />
   <package id="Qiniu" version="7.0.0.1" targetFramework="net45" />
 </packages>
