--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -6,6 +6,7 @@
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="ImageProcessor" version="2.5.2" targetFramework="net45" />
+  <package id="log4net" version="2.0.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
