--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -152,6 +152,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api\BaiduTranslateHelper.cs" />
     <Compile Include="api\UmengPushHelper.cs" />
     <Compile Include="cache\CacheManager.cs" />
     <Compile Include="cache\ICacheProvider.cs" />
