--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -14,6 +14,7 @@
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.2.1" targetFramework="net45" />
+  <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net45" />
   <package id="ZXing" version="2.1.1" targetFramework="net45" />
