--- a/Hiwjcn.Test/app.config
+++ b/Hiwjcn.Test/app.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="rabbitmq" type="Lib.mq.RabbitMQSection,Lib" />
+  </configSections>
+  <rabbitmq HostName="172.16.42.29" UserName="admin" Password="mypass" VirtualHost="/" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
