--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -12,4 +12,5 @@
   <package id="NLog" version="1.0.0.505" targetFramework="net45" />
   <package id="Polly" version="5.0.6" targetFramework="net45" />
   <package id="Qiniu" version="7.0.0.1" targetFramework="net45" />
+  <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
 </packages>
