--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -9,6 +9,7 @@
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
+    <section name="rabbitmq" type="Lib.mq.RabbitMQSection,Lib"/>
     <!--注册日志组件-->
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!--申明EF节点-->
@@ -25,6 +26,7 @@
       </factoryAdapter>
     </logging>
   </common>
+  <rabbitmq HostName="172.16.42.29" UserName="admin" Password="mypass" VirtualHost="/" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
