--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -99,6 +99,10 @@
       <HintPath>..\packages\NPOI.2.2.1\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Polly, Version=5.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Polly.5.0.6\lib\net45\Polly.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RabbitMQ.Client, Version=3.6.6.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
       <HintPath>..\packages\RabbitMQ.Client.3.6.6\lib\net45\RabbitMQ.Client.dll</HintPath>
       <Private>True</Private>
@@ -181,6 +185,7 @@
     <Compile Include="extension\DateTimeExtension.cs" />
     <Compile Include="extension\ConvertExtension.cs" />
     <Compile Include="extension\LogExtension.cs" />
+    <Compile Include="extension\PollyExtension.cs" />
     <Compile Include="extension\TypeExtension.cs" />
     <Compile Include="extension\ValidateExtension.cs" />
     <Compile Include="helper\EncodingHelper.cs" />
