--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -15,6 +15,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.2.1" targetFramework="net45" />
   <package id="Polly" version="5.0.6" targetFramework="net45" />
+  <package id="Quartz" version="2.5.0" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net45" />
