--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -4,6 +4,7 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="5.2.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="ImageProcessor" version="2.5.2" targetFramework="net45" />
   <package id="log4net" version="2.0.7" targetFramework="net45" />
@@ -12,6 +13,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
+  <package id="NEST" version="5.2.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.2.1" targetFramework="net45" />
   <package id="Polly" version="5.0.6" targetFramework="net45" />
