--- a/Hiwjcn.Web/packages.config
+++ b/Hiwjcn.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Log4Net1211" version="3.3.1" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
@@ -19,6 +20,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net45" />
+  <package id="NEST" version="2.4.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Qiniu" version="6.2.1.1" targetFramework="net45" />
 </packages>
