--- a/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -106,6 +106,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttributeBundle.cs" />
+    <Compile Include="Tasks\CleanDatabaseTask.cs" />
+    <Compile Include="Tasks\DataReportTask.cs" />
     <Compile Include="UserController.cs" />
     <Compile Include="Simple_CRUD.cs" />
     <Compile Include="Tasks\WakeWebSiteTask.cs" />
