--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -39,6 +39,14 @@
       <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Autofac.Extras.DynamicProxy, Version=4.1.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Extras.DynamicProxy.4.1.0\lib\net45\Autofac.Extras.DynamicProxy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.2.2\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Common.Logging, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\packages\Common.Logging.3.3.1\lib\net40\Common.Logging.dll</HintPath>
       <Private>True</Private>
@@ -217,6 +225,7 @@
     <Compile Include="helper\ReflectionHelper.cs" />
     <Compile Include="infrastructure\ServiceBase.cs" />
     <Compile Include="ioc\BaseDependencyRegistrar.cs" />
+    <Compile Include="ioc\DependencyRegistrarBase.cs" />
     <Compile Include="ioc\IDependencyRegistrar.cs" />
     <Compile Include="log\ESLogAppender.cs" />
     <Compile Include="mq\MessageConsumer.cs" />
