ef async test failed

--- a/Hiwjcn.Test/app.config
+++ b/Hiwjcn.Test/app.config
@@ -2,6 +2,8 @@
 <configuration>
   <configSections>
     <section name="rabbitmq" type="Lib.mq.RabbitMQSection,Lib" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <rabbitmq HostName="172.16.42.29" UserName="admin" Password="mypass" VirtualHost="/" />
   <appSettings>
@@ -9,36 +11,27 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
     <add key="sign_key" value="cqmyg-ysdss-jtwmy-dtsgx" />
-
     <add key="CookieDomain" value="" />
     <!--允许跨域ajax的域名-->
     <add key="Origin_Allow" value="local" />
-
     <!--域名用逗号隔开-->
     <add key="AllowDomains" value="" />
-
     <add key="SmptServer" value="smtp.epcservices.com.cn" />
     <add key="SmptLoginName" value="reception@epcservices.com.cn" />
     <add key="SmptPassWord" value="Colin5215" />
     <add key="SmptSenderName" value="EPC_WEBSITE" />
     <add key="SmptEmailAddress" value="reception@epcservices.com.cn" />
-
     <add key="FeedBackEmail" value="reception@epcservices.com.cn" />
-
     <add key="SSOLoginUrl" value="http://localhost/account/login/" />
     <add key="SSOLogoutUrl" value="http://localhost/account/logoutsso/" />
     <add key="CheckLoginInfoUrl" value="http://localhost/account/CheckChildSiteToken/" />
-
     <add key="CallBackUrl" value="Account/GetCallBackResult/" />
     <add key="DefaultRedirectUrl" value="Page/Home/" />
-
     <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP" />
     <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD" />
     <add key="QiniuBucketName" value="hiwjcn" />
     <add key="QiniuBaseUrl" value="http://hiwjcn.qiniudn.com/" />
-
     <!--1年-->
     <add key="CookieExpiresMinutes" value="525600" />
     <add key="CacheExpiresMinutes" value="5" />
@@ -83,4 +76,14 @@
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
