--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Core" version="1.2.0" targetFramework="net45" />
   <package id="Castle.DynamicProxy" version="2.2.0" targetFramework="net45" />
   <package id="Elasticsearch.Net" version="5.2.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
