--- a/Hiwjcn.Web/App_Data/Config/log4net.config
+++ b/Hiwjcn.Web/App_Data/Config/log4net.config
@@ -12,9 +12,10 @@
       <appender-ref ref="WARN_FILE" />
     </root>
     <!--业务相关的日志-->
-    <logger name="B.LOG" additivity="false">
+    <logger name="WebLogger" additivity="false">
       <level value="INFO" />
       <appender-ref ref="B_FILE" />
+      <appender-ref ref="AdoNetAppender" />
     </logger>
     <!--错误-->
     <appender name="ERROR_FILE" type="log4net.Appender.RollingFileAppender">
@@ -83,6 +84,61 @@
         <levelMin value="WARN" />
         <levelMax value="WARN" />
       </filter>
+    </appender>
+    <!--数据库-->
+    <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+      <bufferSize value="1" />
+      <!--
+      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <connectionString value="Data Source=124230.42326.42342222.1542341;Initial Catalog=4234;Persist Security Info=True;User ID=sa;Password=1q2w42343e4r5T" />
+      <commandText value="INSERT INTO T_Sys_Log ([TaskName],[Date],[Thread],[Level],[Logger],[Message],[Exception]) VALUES ('TuhuProductSync',@log_date, @thread, @log_level, @logger, @message, @exception)" />
+      -->
+      <connectionType value="MySql.Data.MySqlClient.MySqlConnection, MySql.Data" />
+      <connectionString value="database=hiwjcn;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
+      <commandText value="INSERT INTO tb_sys_log (LogName,LogTime,LogThread,LogLevel,LoggerName,LogMsg,LogException,CreateTime)VALUES('日志',@log_date,@thread,@log_level,@logger,@message,@exception,now())" />
+      <parameter>
+        <parameterName value="@log_date" />
+        <dbType value="DateTime" />
+        <layout type="log4net.Layout.RawTimeStampLayout" />
+      </parameter>
+      <parameter>
+        <parameterName value="@thread" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%thread" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@log_level" />
+        <dbType value="String" />
+        <size value="50" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%level" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@logger" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%logger" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@message" />
+        <dbType value="String" />
+        <size value="4000" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%message" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@exception" />
+        <dbType value="String" />
+        <size value="2000" />
+        <layout type="log4net.Layout.ExceptionLayout" />
+      </parameter>
     </appender>
   </log4net>
 </configuration>
