--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -236,6 +236,8 @@
     <Compile Include="mq\RabbitMQExtension.cs" />
     <Compile Include="mq\RabbitMQSection.cs" />
     <Compile Include="mvc\CookieHelper.cs" />
+    <Compile Include="mvc\plugin\BasePaymentController.cs" />
+    <Compile Include="mvc\plugin\BasePluginController.cs" />
     <Compile Include="mvc\RequestHelper.cs" />
     <Compile Include="mvc\ResponseHelper.cs" />
     <Compile Include="mvc\ServerHelper.cs" />
