--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.Extras.DynamicProxy" version="4.1.0" targetFramework="net45" />
+  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
   <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
