--- a/Hiwjcn.Web/packages.config
+++ b/Hiwjcn.Web/packages.config
@@ -22,5 +22,6 @@
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net45" />
   <package id="NEST" version="2.4.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="Polly" version="5.0.6" targetFramework="net45" />
   <package id="Qiniu" version="6.2.1.1" targetFramework="net45" />
 </packages>
