--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -277,6 +277,7 @@
     <Compile Include="mvc\AttributeBundle.cs" />
     <Compile Include="mvc\user\CheckLoginInfoData.cs" />
     <Compile Include="mvc\HtmlExtensions.cs" />
+    <Compile Include="mvc\user\IGetLoginUrl.cs" />
     <Compile Include="mvc\user\LoginUserInfo.cs" />
     <Compile Include="mvc\MySQLSessionProvider.cs" />
     <Compile Include="mvc\user\PermissionVerifyAttribute.cs" />
