--- a/Hiwjcn.Plugin.Page.Resume/web.config
+++ b/Hiwjcn.Plugin.Page.Resume/web.config
@@ -36,7 +36,7 @@
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <!--使用自定义的模板引擎-->
-    <pages pageBaseType="Hiwjcn.Framework.ViewEngines.MyWebViewPage">
+    <pages pageBaseType="Lib.mvc.MyWebViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
@@ -44,8 +44,6 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Lib.helper"/>
         <add namespace="Lib.core"/>
-        <add namespace="Hiwjcn.Bll"/>
-        <add namespace="Hiwjcn.Framework"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
