--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -205,6 +205,12 @@
     <Compile Include="data\EFRepository.cs" />
     <Compile Include="data\EFManager.cs" />
     <Compile Include="data\RedisManager.cs" />
+    <Compile Include="distributed\DistributedLockClient.cs" />
+    <Compile Include="distributed\RedisDistributedLock.cs" />
+    <Compile Include="distributed\ZooKeeperClient.cs" />
+    <Compile Include="distributed\ZooKeeperClientSection.cs" />
+    <Compile Include="distributed\ZooKeeperConfigurationClient.cs" />
+    <Compile Include="distributed\ZooKeeperConfigurationManager.cs" />
     <Compile Include="events\EntityDeleted.cs" />
     <Compile Include="events\EntityInserted.cs" />
     <Compile Include="events\EntityUpdated.cs" />
