--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -210,14 +210,11 @@
     <Compile Include="data\EFManager.cs" />
     <Compile Include="data\RedisManager.cs" />
     <Compile Include="data\SerializeBase.cs" />
-    <Compile Include="distributed\DistributedLockClient.cs" />
+    <Compile Include="distributed\ZooKeeperDistributedLock.cs" />
     <Compile Include="distributed\IDistributedLock.cs" />
     <Compile Include="distributed\RedisDistributedLock.cs" />
     <Compile Include="distributed\ZooKeeperClient.cs" />
-    <Compile Include="distributed\ZooKeeperClientSection.cs" />
-    <Compile Include="distributed\ZooKeeperConfigurationClient.cs" />
-    <Compile Include="distributed\ZooKeeperConfigurationManager.cs" />
-    <Compile Include="distributed\ZooKeeperLock.cs" />
+    <Compile Include="distributed\ZooKeeperConfigProvider.cs" />
     <Compile Include="events\EntityDeleted.cs" />
     <Compile Include="events\EntityInserted.cs" />
     <Compile Include="events\EntityUpdated.cs" />
