--- a/Hiwjcn.Test/Hiwjcn.Test.csproj
+++ b/Hiwjcn.Test/Hiwjcn.Test.csproj
@@ -129,6 +129,7 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest2.cs" />
+    <Compile Include="UnitTest3.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hiwjcn.Core\Hiwjcn.Core.csproj">
