--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -203,6 +203,7 @@
     <Compile Include="core\LibReleaseHelper.cs" />
     <Compile Include="core\StoreInstanceDict.cs" />
     <Compile Include="core\ThreadWrapper.cs" />
+    <Compile Include="data\DapperLinq.cs" />
     <Compile Include="data\DBHelper.cs" />
     <Compile Include="data\EFEntityDB.cs" />
     <Compile Include="data\EFExtension.cs" />
