--- a/Hiwjcn.Core/packages.config
+++ b/Hiwjcn.Core/packages.config
@@ -4,6 +4,7 @@
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
+  <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.0.488" targetFramework="net45" />
 </packages>
