--- a/Hiwjcn.Test/Hiwjcn.Test.csproj
+++ b/Hiwjcn.Test/Hiwjcn.Test.csproj
@@ -132,6 +132,7 @@
     <Compile Include="UnitTest3.cs" />
     <Compile Include="UnitTest4.cs" />
     <Compile Include="UnitTest5.cs" />
+    <Compile Include="UnitTest6.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hiwjcn.Core\Hiwjcn.Core.csproj">
