--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -9,7 +9,8 @@
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
-    <section name="rabbitmq" type="Lib.mq.RabbitMQSection,Lib" />
+    <section name="lib_rabbitmq" type="Lib.mq.RabbitMQSection,Lib" />
+    <section name="lib_zookeeper" type="Lib.distributed.ZooKeeperConfigSection,Lib"/>
     <!--注册日志组件-->
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!--申明EF节点-->
@@ -26,7 +27,8 @@
       </factoryAdapter>
     </logging>
   </common>
-  <rabbitmq HostName="172.16.42.29" UserName="admin" Password="mypass" VirtualHost="/" />
+  <lib_rabbitmq HostName="mq.qipeilong.net" UserName="admin" Password="mypass" VirtualHost="/" />
+  <lib_zookeeper SessionTimeOut="5000" Server="zk.qipeilong.net" MasterSlavePath="/" DistributedLockPath="/lock" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -69,7 +71,7 @@
   </appSettings>
   <connectionStrings>
     <add name="MySqlConnectionString" connectionString="database=hiwjcn;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
-    <add name="RedisConnectionString" connectionString="172.16.42.28:6379,password=1q2w3e4r5T" />
+    <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
   </connectionStrings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
