--- a/Hiwjcn.Web/App_Data/Config/log4net.config
+++ b/Hiwjcn.Web/App_Data/Config/log4net.config
@@ -10,6 +10,7 @@
       <appender-ref ref="ERROR_FILE" />
       <appender-ref ref="INFO_FILE" />
       <appender-ref ref="WARN_FILE" />
+      <appender-ref ref="ERROR_ES" />
     </root>
     <!--业务相关的日志-->
     <logger name="WebLogger" additivity="false">
@@ -29,6 +30,13 @@
       <layout type="log4net.Layout.PatternLayout">
         <param name="ConversionPattern" value="发生时间:%d%n事件级别:%level%n相关类名:%c%n程序文件:%F 第%L行%n日志内容:%m%n-----------------------------------------%n%n" />
       </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="ERROR" />
+        <levelMax value="ERROR" />
+      </filter>
+    </appender>
+    <appender name="ERROR_ES" type="Lib.log.ESLogAppender,Lib">
+      <bufferSize value="1" />
       <filter type="log4net.Filter.LevelRangeFilter">
         <levelMin value="ERROR" />
         <levelMax value="ERROR" />
