--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -72,6 +72,7 @@
   <connectionStrings>
     <add name="MySqlConnectionString" connectionString="database=hiwjcn;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
     <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
+    <add name="ES" connectionString="" />
   </connectionStrings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
