--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -10,7 +10,7 @@
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
     <section name="lib_rabbitmq" type="Lib.mq.RabbitMQSection,Lib" />
-    <section name="lib_zookeeper" type="Lib.distributed.ZooKeeperConfigSection,Lib"/>
+    <section name="lib_zookeeper" type="Lib.distributed.ZooKeeperConfigSection,Lib" />
     <!--注册日志组件-->
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!--申明EF节点-->
@@ -72,7 +72,7 @@
   <connectionStrings>
     <add name="MySqlConnectionString" connectionString="database=hiwjcn;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
     <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
-    <add name="ES" connectionString="" />
+    <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
   </connectionStrings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
@@ -138,6 +138,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.7.0" newVersion="2.0.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
