--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -24,6 +24,7 @@
   <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
   <package id="ZooKeeper.Net" version="3.4.6.2" targetFramework="net45" />
   <package id="ZXing" version="2.1.1" targetFramework="net45" />
 </packages>
