--- a/Hiwjcn.Service/packages.config
+++ b/Hiwjcn.Service/packages.config
@@ -17,4 +17,5 @@
   <package id="Qiniu" version="7.0.0.1" targetFramework="net45" />
   <package id="Quartz" version="2.4.1" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
