--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -76,7 +76,11 @@
   </connectionStrings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <!--<trust level="Full" originUrl="" />-->
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="utf-8" />
     <!--MVC中无法使用 ResponseRewrite（暂时使用aspx作为错误页面）asp.net自定义错误404不返回404状态，这里禁用了，自己过滤错误-->
