--- a/Hiwjcn.Framework/packages.config
+++ b/Hiwjcn.Framework/packages.config
@@ -12,5 +12,6 @@
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="Quartz" version="2.5.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.0.488" targetFramework="net45" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
