--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -14,5 +14,6 @@
   <package id="Polly" version="5.0.6" targetFramework="net45" />
   <package id="Qiniu" version="7.0.0.1" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
