--- a/WindowsFormApp/packages.config
+++ b/WindowsFormApp/packages.config
@@ -8,5 +8,6 @@
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="NRobotsPatched" version="1.0.5.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
