--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -53,12 +53,20 @@
     <add key="SmptEmailAddress" value="reception@epcservices.com.cn" />
 
     <add key="FeedBackEmail" value="reception@epcservices.com.cn" />
-
+    <!--SSO登录地址-->
     <add key="SSOLoginUrl" value="http://localhost:51735/sso/login/" />
+    <!--SSO退出地址-->
     <add key="SSOLogoutUrl" value="http://localhost:51735/sso/logout/" />
+    <!--SSO中用来检查登录信息的接口-->
     <add key="CheckLoginInfoUrl" value="http://sso.qipeilong.cn/sso/CheckLoginInfo/" />
+    <!--在SSO中配置的tokenID-->
     <add key="WebToken" value="***" />
+    <!--默认跳转地址-->
     <add key="DefaultRedirectUrl" value="http://sso.qipeilong.cn/user/userlist/" />
+    <!--指定跳回地址-->
+    <add key="SSO_CONTINUE_URL" value=""/>
+    <!--指定服务器跳转，还是把跳转地址返回给前端跳转-->
+    <add key="SSO_NO_LOGIN_RESULT_FOR_INTERFACE" value=""/>
 
     <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP" />
     <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD" />
