--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -255,6 +255,7 @@
     <Compile Include="core\ConfigHelper.cs" />
     <Compile Include="helper\LogHelper.cs" />
     <Compile Include="helper\Pager.cs" />
+    <Compile Include="helper\PermissionHelper.cs" />
     <Compile Include="helper\StringHelper.cs" />
     <Compile Include="helper\HtmlHelper.cs" />
     <Compile Include="helper\ReflectionHelper.cs" />
