--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /Hiwjcn.Service/obj/Release/CoreCompileInputs.cache
 /Hiwjcn.Service/obj/Release/CoreCompileInputs.cache
 *.cache
+/Hiwjcn.Api/bin
+/Hiwjcn.Api/obj/Debug
