--- a/Hiwjcn.Core/Hiwjcn.Core.csproj
+++ b/Hiwjcn.Core/Hiwjcn.Core.csproj
@@ -97,6 +97,22 @@
     <Compile Include="Data\User\RolePermissionDal.cs" />
     <Compile Include="Data\User\UserDal.cs" />
     <Compile Include="Data\User\UserRoleDal.cs" />
+    <Compile Include="Domain\Auth\AuthClients.cs" />
+    <Compile Include="Domain\Auth\Client.cs" />
+    <Compile Include="Domain\Auth\ClientClaim.cs" />
+    <Compile Include="Domain\Auth\ClientCorsOrigin.cs" />
+    <Compile Include="Domain\Auth\ClientCustomGrantType.cs" />
+    <Compile Include="Domain\Auth\ClientIdPRestriction.cs" />
+    <Compile Include="Domain\Auth\ClientPostLogoutRedirectUri.cs" />
+    <Compile Include="Domain\Auth\ClientRedirectUri.cs" />
+    <Compile Include="Domain\Auth\ClientScope.cs" />
+    <Compile Include="Domain\Auth\ClientSecret.cs" />
+    <Compile Include="Domain\Auth\Consent.cs" />
+    <Compile Include="Domain\Auth\Scope.cs" />
+    <Compile Include="Domain\Auth\ScopeClaim.cs" />
+    <Compile Include="Domain\Auth\ScopeSecret.cs" />
+    <Compile Include="Domain\Auth\Token.cs" />
+    <Compile Include="Domain\Auth\TokenType.cs" />
     <Compile Include="Domain\Category\CategoryModel.cs" />
     <Compile Include="Domain\Sys\CommentModel.cs" />
     <Compile Include="Domain\BaseEntity.cs" />
